<resources>
    <string name="app_name">PomodoroClock</string>

    <string name="title">Pomodoro Clock</string>
    <string name="placeholder_timer_text">40:00</string>
    <string name="start_button">Start</string>
    <string name="reset_button">Reset</string>
    <string name="settings_button">Settings</string>
    <string name="reset_text">00:00</string>

    <string-array name="modes">
        <item>Study</item>
        <item>Short Break</item>
        <item>Long Break</item>
    </string-array>
</resources>